# Projet_SNCF

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  fly.backend.toml  fly.frontend.toml  plan-projet-sncf.md  pyproject.toml
.github/workflows/: python-app.yml
eval/: __init__.py  golden_set.json  harness.py
src/sncf_agent/: __init__.py  config.py
src/sncf_agent/backend/: __init__.py  app.py
src/sncf_agent/frontend/: __init__.py  app.py
src/sncf_agent/ingestion/: __init__.py  checkpoint.py  chunking.py  docs.py  embedding.py  parsing.py  pipeline.py  qdrant_store.py  sources.py
src/sncf_agent/rag/: __init__.py  agent.py  llm.py  vectorstore.py
tests/: test_chunking.py  test_parsing.py
