[project]
name = "sncf-agent"
version = "0.1.0"
description = "Agent conversationnel RAG sur les donnees open data SNCF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API et interface
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "streamlit>=1.40",
    # Orchestration agent et RAG
    "langgraph>=0.2.60",
    "langchain>=0.3",
    "langchain-community>=0.3",
    # Providers LLM : Groq et OpenAI pour demarrer (moins couteux), Anthropic pour plus tard
    "langchain-groq>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-huggingface>=0.1",
    "langsmith>=0.2",
    # Vector store et embeddings (prototype local)
    "faiss-cpu>=1.9",
    "sentence-transformers>=3.3",
    # torch declare explicitement : tool.uv.sources ne s'applique qu'aux dependances
    # DIRECTES, et on doit forcer l'index CPU-only sur Linux (image Docker legere)
    "torch>=2",
    # Ingestion et utilitaires
    "httpx>=0.28",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "langchain-ollama>=1.1.0",
    "beautifulsoup4>=4.15.0",
    "pypdf>=6.14.2",
    "logfire[fastapi,system-metrics]>=4.38.0",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.18.0",
]

[project.optional-dependencies]
# Semaine 4 : evaluation (golden set + RAGAS)
eval = [
    "ragas>=0.2",
    "datasets>=3.0",
]
# Semaine 6 : version scalable (Qdrant, cache, gateway LLM)
scale = [
    "qdrant-client>=1.12",
    "redis>=5.2",
    "portkey-ai>=1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

# torch CPU-only sur Linux (image Docker) : les roues PyPI par defaut embarquent les
# libs CUDA (~5 Go) inutiles sur nos instances CPU. Sans effet sur macOS (dev local).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sncf_agent"]
